--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Schülerhilfe Muster – Nachhilfe persönlich & digital</title>
+  <title>Fati's Schülerhilfe – Nachhilfe persönlich & digital</title>
   <meta name="description" content="Individuelle Nachhilfe für Grundschule, Mittelstufe und Gymnasium. Präsenz- und Online-Unterricht." />
   <style>
     :root{--accent:#2563eb;--muted:#6b7280;--bg:#f8fafc;--card:#ffffff}
