--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
   <header>
     <div class="container nav">
       <div class="brand">
-        <div class="logo">SH</div>
+        <div class="logo">FSH</div>
         <div>
-          <div style="font-weight:800">Schülerhilfe Muster</div>
+          <div style="font-weight:800">Fati's Schülerhilfe Muster</div>
           <div style="font-size:13px;color:var(--muted)">Nachhilfe – persönlich & online</div>
         </div>
       </div>
