--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="brand">
         <div class="logo">FSH</div>
         <div>
-          <div style="font-weight:800">Fati's Schülerhilfe Muster</div>
+          <div style="font-weight:800">Fati's Schülerhilfe </div>
           <div style="font-size:13px;color:var(--muted)">Nachhilfe – persönlich & online</div>
         </div>
       </div>
