--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <li><a href="#kontakt">Kontakt</a></li>
         </ul>
       </nav>
-      <div><a class="btn" href="#kontakt">Kostenloses Kennenlerngespräch</a></div>
+  %    <div><a class="btn" href="#kontakt">Kostenloses Kennenlerngespräch</a></div>
     </div>
   </header>
 
