--- a/index.html
+++ b/index.html
@@ -127,23 +127,23 @@
       <div class="tutors-grid">
         <div class="card tutor">
           <div class="avatar" style="background:#fde68a">ML</div>
-          <div class="name">Maja L.</div>
-          <div class="subject">Deutsch, Englisch</div>
+          <div class="name">Fatemeh L.</div>
+          <div class="subject">Mathematik</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#bbf7d0">TC</div>
-          <div class="name">Timo C.</div>
+          <div class="name">Inka L.</div>
           <div class="subject">Mathematik</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#bfdbfe">AN</div>
-          <div class="name">Anja N.</div>
-          <div class="subject">Biologie, Chemie</div>
+          <div class="name">Jan L.</div>
+          <div class="subject">Englisch</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#fbcfe8">LK</div>
-          <div class="name">Lukas K.</div>
-          <div class="subject">Englisch, Französisch</div>
+          <div class="name">Kathi B.</div>
+          <div class="subject">Deutsch</div>
         </div>
       </div>
     </section>
