--- a/index.html
+++ b/index.html
@@ -126,23 +126,23 @@
 
       <div class="tutors-grid">
         <div class="card tutor">
-          <div class="avatar" style="background:#fde68a">ML</div>
+          <div class="avatar" style="background:#fde68a">FL</div>
           <div class="name">Fatemeh L.</div>
           <div class="subject">Mathematik</div>
         </div>
         <div class="card tutor">
-          <div class="avatar" style="background:#bbf7d0">TC</div>
+          <div class="avatar" style="background:#bbf7d0">IL</div>
           <div class="name">Inka L.</div>
           <div class="subject">Mathematik</div>
         </div>
         <div class="card tutor">
-          <div class="avatar" style="background:#bfdbfe">AN</div>
+          <div class="avatar" style="background:#bfdbfe">JL</div>
           <div class="name">Jan L.</div>
           <div class="subject">Englisch</div>
         </div>
         <div class="card tutor">
-          <div class="avatar" style="background:#fbcfe8">LK</div>
-          <div class="name">Kathi B.</div>
+          <div class="avatar" style="background:#fbcfe8">KH</div>
+          <div class="name">Kathi H.</div>
           <div class="subject">Deutsch</div>
         </div>
       </div>
