--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
           <div class="subject">& Chemie</div>
         </div>
         <div class="card tutor">
-          <div class="avatar" style="background:#bbf7d0">IL</div>
-          <div class="name">Inka L.</div>
-          <div class="subject">Mathematik</div>
-        </div>
-        <div class="card tutor">
-          <div class="avatar" style="background:#bfdbfe">JL</div>
+          <div class="avatar" style="background:#bbf7d0">JL</div>
           <div class="name">Jan L.</div>
           <div class="subject">Englisch</div>
+        </div>
+        <div class="card tutor">
+          <div class="avatar" style="background:#bfdbfe">IL</div>
+          <div class="name">Inka L.</div>
+          <div class="subject">Mathematik</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#fbcfe8">KH</div>
