--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
           <div class="avatar" style="background:#bfdbfe">IL</div>
           <div class="name">Inka L.</div>
           <div class="subject">Mathematik</div>
+          <div class="subject">Schwerpunkt Abiturvorbereitung</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#fbcfe8">KH</div>
