--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           const message = document.getElementById('cmessage').value;
           const subject = encodeURIComponent('[Kontaktformular] ' + focus + ' - ' + name);
           const body = encodeURIComponent('Name: '+name+'%0AEmail: '+email+'%0ATelefon: '+phone+'%0AFokus: '+focus+'%0A%0ANachricht:%0A'+message);
-          window.location.href = 'mailto:info@schuelerhilfe.example?subject='+subject+'&body='+body;
+          window.location.href = 'mailto:dirk.lewien@icloud.com?subject='+subject+'&body='+body;
         }
       </script>
     </section>
