--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           const message = document.getElementById('cmessage').value;
           const subject = encodeURIComponent('[Kontaktformular] ' + focus + ' - ' + name);
           const body = encodeURIComponent('Name: '+name+' Email: '+email+' Telefon: '+phone+' Fokus: '+focus+' Nachricht: '+message);
-          window.location.href = 'mailto:dirk.lewien@googlemail.com?subject='+subject+'&body='+body;
+          window.location.href = 'mailto:fatemeh.lewien@web.de?subject='+subject+'&body='+body;
         }
       </script>
     </section>
