--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
           <div class="avatar" style="background:#bbf7d0">JL</div>
           <div class="name">Jan L.</div>
           <div class="subject">Englisch</div>
+          <div class="subject">& Geographie</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#bfdbfe">IL</div>
