--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="card tutor">
           <div class="avatar" style="background:#fde68a">FL</div>
           <div class="name">Fatemeh L.</div>
-          <div class="subject">Mathematik Sekundärst.1</div>
+          <div class="subject">Mathematik Sekundarst.1</div>
           <div class="subject">& Chemie</div>
         </div>
         <div class="card tutor">
