--- a/index.html
+++ b/index.html
@@ -127,25 +127,25 @@
       <div class="tutors-grid">
         <div class="card tutor">
           <div class="avatar" style="background:#fde68a">FL</div>
-          <div class="name">Fatemeh L.</div>
+          <div class="name">Fatemeh L. (Griesheim)</div>
           <div class="subject">Mathematik Sekundarst.1</div>
           <div class="subject">& Chemie</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#bbf7d0">JL</div>
-          <div class="name">Jan L.</div>
+          <div class="name">Jan L. (Darmstadt)</div>
           <div class="subject">Englisch</div>
           <div class="subject">& Geographie</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#bfdbfe">IL</div>
-          <div class="name">Inka L.</div>
+          <div class="name">Inka L. (Frankfurt)</div>
           <div class="subject">Mathematik</div>
           <div class="subject">Schwerpunkt Abiturvorbereitung</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#fbcfe8">KH</div>
-          <div class="name">Kathi H.</div>
+          <div class="name">Kathi H. (Frankfurt)</div>
           <div class="subject">Deutsch</div>
         </div>
       </div>
