--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="tutors-grid">
         <div class="card tutor">
           <div class="avatar" style="background:#fde68a">FL</div>
-          <div class="name">Fatemeh L. (Griesheim)</div>
+          <div class="name">Fatemeh L. (Griesheim/Darmstadt)</div>
           <div class="subject">Mathematik Sekundarst.1</div>
           <div class="subject">& Chemie</div>
         </div>
