--- a/index.html
+++ b/index.html
@@ -1,1 +1,251 @@
 
+<!doctype html>
+<html lang="de">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Fati's Schülerhilfe – Nachhilfe persönlich & digital</title>
+  <meta name="description" content="Individuelle Nachhilfe für Grundschule, Mittelstufe und Gymnasium. Präsenz- und Online-Unterricht." />
+  <style>
+    :root{--accent:#2563eb;--muted:#6b7280;--bg:#f8fafc;--card:#ffffff}
+    *{box-sizing:border-box}
+    body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; margin:0; background:var(--bg); color:#0f172a; line-height:1.45}
+    a{color:var(--accent); text-decoration:none}
+    header{background:linear-gradient(90deg, rgba(37,99,235,0.06), transparent); padding:18px 24px; position:sticky; top:0; z-index:40; backdrop-filter: blur(4px)}
+    .container{max-width:1100px; margin:0 auto; padding:0 20px}
+    .nav{display:flex; align-items:center; justify-content:space-between}
+    .brand{display:flex; align-items:center; gap:12px}
+    .logo{width:44px; height:44px; background:var(--accent); color:white; display:grid; place-items:center; border-radius:8px; font-weight:700}
+    nav ul{display:flex; gap:14px; list-style:none; margin:0; padding:0}
+    .btn{background:var(--accent); color:white; padding:10px 14px; border-radius:10px; font-weight:600; border:0; cursor:pointer}
+
+    /* 🎁 Bonus-Banner */
+    .bonus-banner {
+      background: #facc15;            /* Warmes Gelb */
+      color: #1e293b;                 /* Dunkles Grau-Blau */
+      font-weight: 600;
+      text-align: center;
+      padding: 10px 14px;
+      position: sticky;               /* bleibt oben kleben */
+      top: 0;
+      z-index: 50;                    /* über dem restlichen Inhalt */
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+      animation: fadeSlide 0.6s ease-out;
+    }
+    .bonus-banner strong {
+      color: #0f172a;
+    }
+    @keyframes fadeSlide {
+      from {opacity: 0; transform: translateY(-6px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
+
+    main.container { margin-top: 10px; }
+
+    /* Hero */
+    .hero{padding:56px 0 34px}
+    .hero-grid{display:grid; grid-template-columns:1fr 420px; gap:36px; align-items:center}
+    .hero h1{font-size:clamp(26px,4vw,40px); margin:0 0 12px}
+    .subtitle{color:var(--muted); margin-bottom:18px}
+    .features{display:flex; gap:10px; flex-wrap:wrap}
+    .feature{background:rgba(37,99,235,0.06); padding:10px 12px; border-radius:10px; font-weight:600}
+
+    /* Card */
+    .card{background:var(--card); border-radius:14px; padding:18px; box-shadow:0 6px 18px rgba(15,23,42,0.06)}
+
+    /* Services */
+    .services{display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:18px; margin-top:22px}
+    .service h3{margin:0 0 8px}
+    .service p{margin:0; color:var(--muted)}
+
+    /* Tutors */
+    .tutors-grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); gap:14px}
+    .tutor{padding:12px; text-align:center}
+    .avatar{width:84px; height:84px; border-radius:12px; display:inline-grid; place-items:center; font-weight:700}
+    .name{font-weight:700; margin-top:10px}
+    .subject{color:var(--muted); font-size:14px}
+
+    /* Pricing */
+    .pricing{display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:18px}
+    .price{padding:16px; border-radius:12px}
+    .price h4{margin:0 0 8px}
+
+    /* Contact */
+    form{display:grid; gap:10px}
+    input, textarea, select{padding:10px; border-radius:8px; border:1px solid #e6e9ef; font-size:15px}
+    textarea{min-height:120px}
+
+    footer{margin-top:38px; padding:28px 0; color:var(--muted)}
+
+    /* Responsive */
+    @media (max-width:880px){
+      .hero-grid{grid-template-columns:1fr;}
+      nav ul{display:none}
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="container nav">
+      <div class="brand">
+        <div class="logo">FSH</div>
+        <div>
+          <div style="font-weight:800">Fati's Schülerhilfe </div>
+          <div style="font-size:13px;color:var(--muted)">Nachhilfe – persönlich & online</div>
+        </div>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#services">Leistungen</a></li>
+          <li><a href="#tutors">Nachhilfe-Lehrer</a></li>
+          <li><a href="#preise">Preise</a></li>
+          <li><a href="#kontakt">Kontakt</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- 🎁 Bonus-Banner -->
+  <div class="bonus-banner">
+    🎁 <strong>Willkommensbonus:</strong> Erste Nachhilfestunde kostenlos testen!
+  </div>
+
+  <main class="container">
+    <section class="hero">
+      <div class="hero-grid">
+        <div>
+          <h1>Individuelle Nachhilfe, die wirklich hilft</h1>
+          <p class="subtitle">Mathematik, Deutsch, Englisch & weitere Fächer — für Grundschule, Sekundarstufe I & II. Präsenz- oder Online-Unterricht, auf dein Tempo abgestimmt.</p>
+
+          <div class="card">
+            <div class="features">
+              <div class="feature">1:1 Unterricht</div>
+              <div class="feature">Flexible Termine</div>
+              <div class="feature">Erfahrene Lehrkräfte</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="services" style="margin-top:28px">
+      <h2>Unsere Leistungen</h2>
+      <p class="subtitle">Maßgeschneiderte Lernpläne, regelmäßige Lernstands-Checks und Hausaufgabenbetreuung.</p>
+
+      <div class="services">
+        <div class="card service">
+          <h3>Einzelunterricht</h3>
+          <p>Konzentriert arbeiten, Lücken schließen und Selbstvertrauen stärken.</p>
+        </div>
+
+        <div class="card service">
+          <h3>Vorbereitung auf Prüfungen</h3>
+          <p>Gezielte Vorbereitung für Klassenarbeiten, ZAP und Abitur.</p>
+        </div>
+
+        <div class="card service">
+          <h3>Online-Live-Unterricht</h3>
+          <p>Flexibel von zu Hause mit Videocall, Bildschirmteilung und digitalen Übungen.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="tutors" style="margin-top:28px">
+      <h2>Unsere Lehrkräfte</h2>
+      <p class="subtitle">Erfahrene Pädagogen, Student:innen der Lehrämter und Fachexpert:innen.</p>
+
+      <div class="tutors-grid">
+        <div class="card tutor">
+          <div class="avatar" style="background:#fde68a">FL</div>
+          <div class="name">Fatemeh L. (Griesheim/Darmstadt)</div>
+          <div class="subject">Mathematik Sekundarst. I</div>
+          <div class="subject">& Chemie</div>
+        </div>
+        <div class="card tutor">
+          <div class="avatar" style="background:#bbf7d0">JL</div>
+          <div class="name">Jan L. (Darmstadt)</div>
+          <div class="subject">Englisch</div>
+          <div class="subject">& Geographie</div>
+        </div>
+        <div class="card tutor">
+          <div class="avatar" style="background:#bfdbfe">IL</div>
+          <div class="name">Inka L. (Frankfurt)</div>
+          <div class="subject">Mathematik</div>
+          <div class="subject">Schwerpunkt Abiturvorbereitung</div>
+        </div>
+      </div>
+    </section>
+
+    <section id="preise" style="margin-top:28px">
+      <h2>Preise & Tarife</h2>
+      <p class="subtitle">Transparent & fair — keine versteckten Kosten.</p>
+
+      <div class="pricing">
+        <div class="card price">
+          <h4>Einzelunterricht</h4>
+          <p class="name">ab 28 € / 60 min</p>
+          <p class="subject">1:1 oder online — Preise variieren je nach Qualifikation der Lehrkraft.</p>
+        </div>
+        <div class="card price">
+          <h4>Gruppenstunde</h4>
+          <p class="name">ab 15 € / 60 min</p>
+          <p class="subject">Kleine Gruppen (max. 5 Schüler:innen) — nachhaltig & günstig.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="kontakt" style="margin-top:28px">
+      <h2>Kontakt</h2>
+      <p class="subtitle">Schreibe uns – wir melden uns innerhalb von 24 Stunden.</p>
+
+      <div class="card" style="display:grid; grid-template-columns:1fr 360px; gap:18px}">
+        <div>
+          <form id="contactForm" onsubmit="handleContact(event)">
+            <input required id="cname" placeholder="Name" />
+            <input required id="cemail" type="email" placeholder="E-Mail" />
+            <input id="cphone" placeholder="Telefon (optional)" />
+            <select id="cfocus">
+              <option>Mathematik</option>
+              <option>Deutsch</option>
+              <option>Englisch</option>
+              <option>Sonstiges</option>
+            </select>
+            <textarea id="cmessage" placeholder="Kurz beschreiben, wobei geholfen werden soll..."></textarea>
+            <button class="btn" type="submit">Nachricht senden</button>
+          </form>
+        </div>
+      </div>
+
+      <script>
+        function handleContact(e){
+          e.preventDefault();
+          const name = document.getElementById('cname').value;
+          const email = document.getElementById('cemail').value;
+          const phone = document.getElementById('cphone').value;
+          const focus = document.getElementById('cfocus').value;
+          const message = document.getElementById('cmessage').value;
+          const subject = encodeURIComponent('[Kontaktformular] ' + focus + ' - ' + name);
+          const body = encodeURIComponent('Name: '+name+' Email: '+email+' Telefon: '+phone+' Fokus: '+focus+' Nachricht: '+message);
+          window.location.href = 'mailto:fatemeh.lewien@web.de?subject='+subject+'&body='+body;
+        }
+      </script>
+    </section>
+
+    <p><br><br><br></p>
+  </main>
+
+  <script>
+    // Smooth scroll for anchors
+    document.querySelectorAll('a[href^="#"]').forEach(a=>{
+      a.addEventListener('click', e=>{
+        const href = a.getAttribute('href');
+        if(href.startsWith('#')){
+          e.preventDefault();
+          const el = document.querySelector(href);
+          if(el) el.scrollIntoView({behavior:'smooth', block:'start'});
+        }
+      })
+    });
+  </script>
+</body>
+</html>
