--- a/index.html
+++ b/index.html
@@ -163,13 +163,14 @@
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#bbf7d0">JL</div>
-          <div class="name">Jan L. (Darmstadt)</div>
+          <div class="name">Jan L. (online)</div>
           <div class="subject">Englisch</div>
-          <div class="subject">& Geographie</div>
+          <div class="subject">& Biologie</div>
+          <div class="subject">& Deutsch</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#bfdbfe">IL</div>
-          <div class="name">Inka L. (Frankfurt)</div>
+          <div class="name">Inka L. (online)</div>
           <div class="subject">Mathematik</div>
           <div class="subject">Schwerpunkt Abiturvorbereitung</div>
         </div>
