--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
               <option>Mathematik</option>
               <option>Deutsch</option>
               <option>Englisch</option>
+              <option>Biologie</option>
               <option>Sonstiges</option>
             </select>
             <textarea id="cmessage" placeholder="Kurz beschreiben, wobei geholfen werden soll..."></textarea>
