--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
 
     <section id="kontakt" style="margin-top:28px">
       <h2>Kontakt</h2>
+
+      <p class="subtitle">Ruf mich unter   an</p>
+
+      <p>oder</p>
+      
       <p class="subtitle">Schreibe uns – wir melden uns innerhalb von 24 Stunden.</p>
 
       <div class="card" style="display:grid; grid-template-columns:1fr 360px; gap:18px}">
