--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <section id="kontakt" style="margin-top:28px">
       <h2>Kontakt</h2>
 
-      <p class="subtitle">Ruf mich unter   an</p>
+      <p class="subtitle">Ruf mich unter +49 151 2890 8589 an</p>
 
       <p>oder</p>
       
