--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
 
       <p class="subtitle">Ruf mich unter +49 151 2890 8589 an</p>
 
-      <p>oder</p>
+      <p class="subtitle">   oder</p>
       
-      <p class="subtitle">Schreibe uns – wir melden uns innerhalb von 24 Stunden.</p>
+      <p class="subtitle">schreibe uns – wir melden uns innerhalb von 24 Stunden.</p>
 
       <div class="card" style="display:grid; grid-template-columns:1fr 360px; gap:18px}">
         <div>
@@ -233,7 +233,7 @@
           const message = document.getElementById('cmessage').value;
           const subject = encodeURIComponent('[Kontaktformular] ' + focus + ' - ' + name);
           const body = encodeURIComponent('Name: '+name+' Email: '+email+' Telefon: '+phone+' Fokus: '+focus+' Nachricht: '+message);
-          window.location.href = 'mailto:fatemeh.lewien@web.de?subject='+subject+'&body='+body;
+          window.location.href = 'mailto:lewienf@gmail.com?subject='+subject+'&body='+body;
         }
       </script>
     </section>
