--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           const phone = document.getElementById('cphone').value;
           const focus = document.getElementById('cfocus').value;
           const message = document.getElementById('cmessage').value;
-          const subject = encodeURIComponent('[Kontaktformular] ' + focus + ' - ' + name);
+          const subject = encodeURIComponent('Schülerhilfe');
           const body = encodeURIComponent('Name: '+name+' Email: '+email+' Telefon: '+phone+' Fokus: '+focus+' Nachricht: '+message);
           window.location.href = 'mailto:lewienf@gmail.com?subject='+subject+'&body='+body;
         }
