--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
           const message = document.getElementById('cmessage').value;
           const subject = encodeURIComponent('Schülerhilfe');
           const body = encodeURIComponent('Name: '+name+' Email: '+email+' Telefon: '+phone+' Fokus: '+focus+' Nachricht: '+message);
-          window.location.href = 'mailto:lewienf@gmail.com?subject='+subject+'&body='+body;
+          window.location.href = 'mailto:fatemeh.lewienf@web.de?subject='+subject+'&body='+body;
+        //  window.location.href = 'mailto:lewienf@gmail.com?subject='+subject+'&body='+body;
         }
       </script>
     </section>
