--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <!-- 🎁 Bonus-Banner -->
   <div class="bonus-banner">
-    🎁 <strong>Willkommensbonus:</strong> 10% Rabatt für die Non-Stop Schüler!
+    🎁 <strong>Willkommensbonus:</strong> 10% Rabatt für alle "Studio Non-Stop" Schüler!
   </div>
 
   <main class="container">
