--- a/index.html
+++ b/index.html
@@ -164,9 +164,8 @@
         <div class="card tutor">
           <div class="avatar" style="background:#bbf7d0">JL</div>
           <div class="name">Jan L. (online)</div>
-          <div class="subject">Englisch</div>
-          <div class="subject">& Biologie</div>
-          <div class="subject">& Deutsch</div>
+          <div class="subject">Englisch & Geographie</div>
+          <div class="subject">& Biologie & Deutsch</div>
         </div>
         <div class="card tutor">
           <div class="avatar" style="background:#bfdbfe">IL</div>
