--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="card tutor">
           <div class="avatar" style="background:#fde68a">FL</div>
           <div class="name">Fatemeh L. (Griesheim/Darmstadt)</div>
-          <div class="subject">Mathematik Sekundarst. I</div>
+          <div class="subject">Mathematik</div>
           <div class="subject">& Chemie</div>
         </div>
         <div class="card tutor">
